[tool.poetry]
name = "ollama-exporter"
version = "0.1.0"
description = "pyshark + prometheus exporter"
authors = ["Roflaff <kimsp0317@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
